logs/django-dictionary-search.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dictionary_search'...
Compiling './lib/python3.5/site-packages/dictionary_search/forms.py'...
***   File "./lib/python3.5/site-packages/dictionary_search/forms.py", line 26
    print query
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dictionary_search/templates'...
Listing './lib/python3.5/site-packages/dictionary_search/templates/dictionary_search'...
Listing './lib/python3.5/site-packages/dictionary_search/templates/search'...
Listing './lib/python3.5/site-packages/dictionary_search/templates/search/indexes'...
Listing './lib/python3.5/site-packages/dictionary_search/templates/search/indexes/dictionary_search'...
Compiling './lib/python3.5/site-packages/dictionary_search/utils.py'...
***   File "./lib/python3.5/site-packages/dictionary_search/utils.py", line 86
    print "LOG: " + str(log_record)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dictionary_search/views.py'...
***   File "./lib/python3.5/site-packages/dictionary_search/views.py", line 163
    print request.FILES
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_dictionary_search-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
